--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
